# mini-tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md
build-scripts/: _compile.cmd  build-clean.cmd  build.cmd  compile.cmd  open-exe-dir.cmd  run-test.cmd  run-tests.cmd
build-scripts/run-tests/: algorithms.cmd  data-structures.cmd  init-inputs.cmd  run-algorithms.cmd  run-all.cmd  run-datastructures.cmd  run-utils.cmd  utils.cmd  var-status-printer.cmd
build-scripts/run_tests/: init_inputs.cmd  run_algorithms.cmd  run_all.cmd  run_datastructures.cmd  run_utils.cmd
build_scripts/run-tests/: init-inputs.cmd
build_scripts/run_tests/: run-datastructures.cmd
c++/: .gitignore  CMakeLists.txt  _build.bat  _compile.bat  _generate-seeds.bat  _run_seeds.bat  main.cpp
c++/algorithms/: bubble-sort.h  merge-sort.h  quick-sort.h
c++/includes/: CMakeLists.txt  mini-tools.h  types.h
c++/includes/algorithms/: algorithms.h  calculators.cpp  calculators.h
c++/includes/algorithms/geometrics/: CMakeLists.txt  bounding-box.cpp  bounding-box.h  geometrics.h  point.cpp  point.h  polygon.cpp  polygon.h  ray-casting.cpp  ray-casting.h  rect.cpp  rect.h  size.h
c++/includes/algorithms/sorters/: CMakeLists.txt  bubble-sort.cpp  bubble-sort.h  comb-sort.cpp  comb-sort.h  insertion-sort.cpp  insertion-sort.h  merge-sort.cpp  merge-sort.h  quick-sort.cpp  quick-sort.h  selection-sort.cpp  selection-sort.h  selection-sort.tpp  sorters.h
c++/includes/data-structures/: data-structures.h  linked-list.cpp  linked-list.h  linked-list.tpp  tree.cpp  tree.h
c++/includes/structures/: structures.h
c++/includes/utils/: printer.cpp  printer.h  reader.cpp  reader.h  scanner.h  size-tools.cpp  size-tools.h  str-tools.cpp  str-tools.h  timer.cpp  timer.h  types.h  utils.h  vec-tools.cpp  vec-tools.h  vec-tools.tpp
c++/resources/: _compile.bat
c++/test/: CMakeLists.txt  _build-clean.cmd  _build.cmd  _compile.bat  _generate-seeds.bat  _run-number-test.bat  _run.cmd  number-test.cpp
c++/utils/: printer.h  reader.cpp  reader.h  utils.h  vec-tools.cpp
includes/: mini-tools.h  mini-tools.hpp  types.h  types.hpp
includes/algorithms/: algorithms.h  algorithms.hpp  bubble-sort.h  calculators.h  insertion-sort.h  number-sequence.hpp  number_sequence.h  number_sequence.hpp  round-robin.h  round-robin.hpp  round_robin.hpp
includes/data-structures/: data-structures.h  general-tree.hpp  linked-list.cpp  linked-list.h  linked-list.hpp  linked-list.tpp  size-tools.h  str-tools.h  tree.h  vec-tools.h
includes/data_structures/: data_structures.hpp  general_tree.hpp  linked_list.hpp  tree.hpp
includes/sorters/: bubble-sort.h  comb-sort.h  insertion-sort.h  merge-sort.h  quick-sort.h  selection-sort.h  sorters.h
includes/utils/: booleanizer.hpp  calculators.h  cli-parser.hpp  file-tool.hpp  pair-tool.hpp  pair-tools.h  pair-tools.hpp  pair_tools.hpp  printer.h  printer.hpp  printer.tpp  reader.h  (+22 more)
src/: CMakeLists.txt
src/algorithms/: calculators.cpp  insertion-sort.tpp  number-sequence.cpp  quick-sort.tpp  round-robin.tpp
src/algorithms/sorters/: bubble.tpp  comb.tpp  insertion.tpp  merge-sort.tpp  merge.tpp  quick-sort.tpp  quick.tpp  selection-sort.tpp  selection.tpp
src/data-structures/: general-tree.cpp  linked-list.cpp  linked-list.tpp  linked_list.tpp  size-tools.tpp  str-tools.cpp  tree.cpp  vec-tools.tpp
src/data_structures/: general-tree.cpp  linked_list.cpp  tree.cpp
src/sorters/: bubble-sort.tpp  comb-sort.tpp  insertion-sort.tpp  merge-sort.tpp  quick-sort.tpp  selection-sort.tpp
src/utils/: booleanizer.cpp  calculators.cpp  cli-parser.cpp  cli-parser.tpp  file-tool.cpp  pair-tool.tpp  pair-tools.tpp  pair_tools.tpp  printer.cpp  printer.tpp  random-words.cpp  random-words.tpp  random_words.cpp  random_words.tpp  reader.cpp  scanner.cpp  scanner.tpp  str-tool.cpp  str-tools.cpp  str_tools.cpp  time-date.cpp  time_date.cpp  timer.cpp  vec-tool.tpp  vec-tools.tpp  vec_tools.tpp
test/: CMakeLists.txt  _generate-seeds.cmd  number-test.cpp
test/main-files/: CMakeLists.txt  helper.cpp  helper.h  helper.hpp  helper.tpp  status-printer.cpp
test/main-files/algorithms/: CMakeLists.txt
test/main-files/algorithms/sorters/: CMakeLists.txt  bubble.cpp  comb.cpp  insertion.cpp  merge.cpp  quick.cpp  selection.cpp  sorters_helper.h
test/main-files/data-structures/: CMakeLists.txt  general-tree.cpp  linked-list.cpp
test/main-files/data-structures/linked-lists/: CMakeLists.txt
test/main-files/utils/: CMakeLists.txt  cli-parser.cpp  printer.cpp  random-words.cpp  scanner.cpp  time-date.cpp  timer.cpp  vec-tool.cpp
(+67 files in other folders)
